--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,8 +32,8 @@ release:
   # Repo in which the release will be created.
   # Default is extracted from the origin remote URL.
   github:
-    owner: extp
-    name: provision
+    owner: txn2
+    name: extp
 
   # If set to true, will not auto-publish the release.
   # Default is false.
